--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <span>London, United Kingdom</span>
     <p>"Front-end developer and avid reader."</p>
     <button>GitHub</button>
-    <button>Frontend Mentor</button>
+    <button>Frontend-Mentor</button>
     <button>LinkedIn</button>
     <button>Twitter</button>
     <button>Instagram</button>
